--- a/pom.xml
+++ b/pom.xml
@@ -31,14 +31,14 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
+            <version>1.8.0-alpha2</version>
         </dependency>
 
         <!-- only needed to make logging work during tests -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>${slf4j.version}</version>
+            <version>1.8.0-alpha2</version>
             <scope>runtime</scope>
         </dependency>
         
@@ -48,8 +48,7 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.14</version>
-            <scope>compile</scope>
+            <version>1.2.17</version>
         </dependency>
     </dependencies>
     <build>
